methods.slug.SlugHunting.scala.error
Erreur de compilation :
SlugHunting:8: error: ';' expected but 'else' found.
      else
      ^